--- a/session7_vector_borne_modelling/session7_vector_borne_modelling.qmd
+++ b/session7_vector_borne_modelling/session7_vector_borne_modelling.qmd
@@ -229,7 +229,7 @@ $$r=\frac{b}{N_H}$$
 
 This is the number of bites a single human receives from a single mosquito per unit time, and is analogous to 'contact' in directly-transmitted disease models.
 
-**2.3 What happens to the rate** $r$ as the human population increases? What do you think might be the implication for transmission?
+**2.3 What happens to the rate $r$ as the human population increases? What do you think might be the implication for transmission?**
 
 ```{=html}
 <textarea cols="127" rows="4"></textarea>
@@ -259,11 +259,11 @@ We refer to this as the probability of successful transmission.
 ```
 <p><br></p>
 
-### Force of infection — on humans $(λ_H)$ and on mosquitoes $(λ_M)$
+### Force of infection on humans $(λ_H)$ and on mosquitoes $(λ_M)$
 
 The expressions in 2.4 and 2.5 are for the rate of 'successful' bites between a single susceptible human and a single infectious mosquito. The *force of infection on humans*, $λ_H$, is the rate at which a susceptible human acquires infection, noting that infection can be acquired from any infectious mosquito.
 
-**2.6 Write the expression for the force of infection on humans,** $λ_H$.
+**2.6 Write the expression for the force of infection on humans, $λ_H$.**
 
 ```{=html}
 <textarea cols="127" rows="2"></textarea>
@@ -272,7 +272,7 @@ The expressions in 2.4 and 2.5 are for the rate of 'successful' bites between a 
 
 Similarly the *force of infection on mosquitoes*, $λ_M$, is the rate at which a susceptible mosquito acquires infection. A mosquito can acquire infection from any infectious human.
 
-**2.7 Write the expression for the force of infection on mosquitoes,** $λ_M$.
+**2.7 Write the expression for the force of infection on mosquitoes, $λ_M$.**
 
 ```{=html}
 <textarea cols="127" rows="2"></textarea>
@@ -283,14 +283,14 @@ Similarly the *force of infection on mosquitoes*, $λ_M$, is the rate at which a
 
 The force of infection (on humans or mosquitoes) is the rate at which infection is acquired in a single susceptible host. To calculate the rate that new infections occur in the whole human or mosquito population, we have to multiply the force of infection by the population at risk of being infected.
 
-**2.8 Using the equation for the force of infection on humans,** $λ_H$, write the expression for the total number of human infections per unit time.
+**2.8 Using the equation for the force of infection on humans, $λ_H$, write the expression for the total number of human infections per unit time.**
 
 ```{=html}
 <textarea cols="127" rows="2"></textarea>
 ```
 <p><br></p>
 
-**2.9 Using the equation for the force of infection on mosquitoes,** $λ_M$, write the expression for the total number of mosquito infections per unit time.
+**2.9 Using the equation for the force of infection on mosquitoes, $λ_M$, write the expression for the total number of mosquito infections per unit time.**
 
 ```{=html}
 <textarea cols="127" rows="2"></textarea>
@@ -416,7 +416,7 @@ The basic reproduction number, $R_0$, for a vector-borne disease is the number o
 
 We firstly start with the expected number of humans (in a totally susceptible population) infected by this mosquito over the duration of their infectious period.
 
-**3.4 Write down this expression using the information you have developed in Parts 2 and 3 (i.e. number of new infections and the duration of the infectious period). We will denote this as** $R_{HM}$.
+**3.4 Write down this expression using the information you have developed in Parts 2 and 3 (i.e. number of new infections and the duration of the infectious period). We will denote this as $R_{HM}$.**
 
 ```{=html}
 <textarea cols="127" rows="4"></textarea>
@@ -425,7 +425,7 @@ We firstly start with the expected number of humans (in a totally susceptible po
 
 Next we consider the expected number of mosquitoes (in a totally susceptible population) infected by a single human over the duration of their infectious period.
 
-**3.5 Write down this expression using the information you have developed in Parts 2 and 3 (i.e. number of new infections and the duration of the infectious period). We will denote this as** $R_{MH}$.
+**3.5 Write down this expression using the information you have developed in Parts 2 and 3 (i.e. number of new infections and the duration of the infectious period). We will denote this as $R_{MH}$.**
 
 ```{=html}
 <textarea cols="127" rows="4"></textarea>
@@ -441,21 +441,21 @@ Since a single mosquito infects $R_{HM}$ humans, and each of these humans infect
 ```
 <p><br></p>
 
-**3.7 What happens to** $R_0$ as the number of mosquitoes increases? Why?
+**3.7 What happens to $R_0$ as the number of mosquitoes increases? Why?**
 
 ```{=html}
 <textarea cols="127" rows="4"></textarea>
 ```
 <p><br></p>
 
-**3.8 What happens to** $R_0$ as the number of humans increases? Why?
+**3.8 What happens to $R_0$ as the number of humans increases? Why?**
 
 ```{=html}
 <textarea cols="127" rows="4"></textarea>
 ```
 <p><br></p>
 
-**3.9 Depending on the season, mosquitoes may have a reduced life expectancy. What happens to** $R_0$ as the life expectancy of mosquitoes reduces? Why?
+**3.9 Depending on the season, mosquitoes may have a reduced life expectancy. What happens to $R_0$ as the life expectancy of mosquitoes reduces? Why?**
 
 ```{=html}
 <textarea cols="127" rows="4"></textarea>
